@@ -43,3 +43,5 @@ Added command line arguments
 Renamed templates to make them easier to match with source files
 Added struct forward declarations to metadata
 Added ImVector_Construct() and ImVector_Destruct() helpers
+Added typedefs to the metadata output
+Added parsed versions of complex types to the metadata output
